servicemesh/09_tls-north-south/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: training  
  name: gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        name: http
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: frontend.kubermatic.training
      hosts:
        - "frontend.kubermatic.training"
