servicemesh/09_tls-north-south/frontend-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: training  
  name: frontend
spec:
  hosts:
      - frontend.kubermatic.training
  gateways:
    - gateway
  http:
    - route:
        - destination:
            host: frontend.training.svc.cluster.local
            port:
                number: 8080
